# slopwm

./: .clangd  .gitignore  CMakeLists.txt  build.zig  build.zig.zon  guide.md
src/: Column.cpp  Column.hpp  Keybindings.cpp  Keybindings.hpp  LayoutRenderer.cpp  LayoutRenderer.hpp  Monitor.cpp  Monitor.hpp  TrayManager.cpp  TrayManager.hpp  Utils.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp  Workspace.cpp  Workspace.hpp  WorkspaceManager.cpp  WorkspaceManager.hpp  keybindings.zig  main.cpp  main.zig  tray.zig  win32.zig  wm.zig
